Definición de seleccion de mascota

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 		
 		<h2>Elige a tu mascota:</h2>
 
+		<label for="Hipodoge">Hipodoge - Agua 💦</label>
+		<input type="radio" id="Hipodoge" name="mascota" /><br>
+
+		<label for="Capipepo">Capipepo - Tierra 🌱</label>
+		<input type="radio" id="Capipepo" name="mascota" /><br>
+
+		<label for="Ratigueya">Ratigueya - Fuego 🔥</label>
+		<input type="radio" id="Ratigueya" name="mascota" /><br>
+
+		<label for="Langostelvis">Langostelvis -  Agua 💦 y Fuego 🔥</label>
+		<input type="radio" id="Langostelvis" name="mascota" /><br>
+
+		<label for="Tucapalma">Tucapalma - Agua 💦 y Tierra 🌱</label>
+		<input type="radio" id="Tucapalma" name="mascota" /><br>
+
+		<label for="Pydos">Pydos - Tierra 🌱 y Fuego 🔥</label>
+		<input type="radio" id="Pydos" name="mascota" /><br>
+
 		<button>Seleccionar</button>
 
 	</section>
@@ -27,7 +45,7 @@
 		<p>
 			<button>Fuego 🔥</button>
 			<button>Agua 💦</button>
-			<button>Tierra 🌱</button>
+			<button>Tierra 🌱	</button>
 		</p>
 	</section>
 
