Avance en la selección de ataque

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</section>
 
 	<section id="mensajes">
-		<p><span>Tu mascota Ataco con fuego, la mascota del enemigo ataco con tierra - Ganaste</span></p>
+		<p>Tu mascota Ataco con <span>fuego</span>, la mascota del enemigo ataco con <span>Tierra</span> - Ganaste</p>
 	</section>
 
 	<section id="reiniciar">
