Mensaje de ganador o perdedor finalizado

--- a/index.html
+++ b/index.html
@@ -23,15 +23,6 @@
 		<label for="Ratigueya">Ratigueya - Fuego 🔥</label>
 		<input type="radio" id="Ratigueya" name="mascota" /><br>
 
-		<label for="Langostelvis">Langostelvis -  Agua 💦 y Fuego 🔥</label>
-		<input type="radio" id="Langostelvis" name="mascota" /><br>
-
-		<label for="Tucapalma">Tucapalma - Agua 💦 y Tierra 🌱</label>
-		<input type="radio" id="Tucapalma" name="mascota" /><br>
-
-		<label for="Pydos">Pydos - Tierra 🌱 y Fuego 🔥</label>
-		<input type="radio" id="Pydos" name="mascota" /><br>
-
 		<button id="boton-mascota">Seleccionar</button>
 
 	</section>
@@ -40,8 +31,8 @@
 
 		<h2>Elige tu ataque:</h2>
 
-		<p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
-		<p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
+		<p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+		<p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
 
 		<p>
 			<button id="boton-fuego">Fuego 🔥</button>
