Funcionalidad de reinicio finalizada

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<h2>Elige a tu mascota:</h2>
 
 		<label for="Hipodoge">Hipodoge - Agua 💦</label>
-		<input type="radio" id="Hipodoge" name="mascota" /><br>
+		<input type="radio" id="Hipodoge" name="mascota" />
 
 		<label for="Capipepo">Capipepo - Tierra 🌱</label>
-		<input type="radio" id="Capipepo" name="mascota" /><br>
+		<input type="radio" id="Capipepo" name="mascota" />
 
 		<label for="Ratigueya">Ratigueya - Fuego 🔥</label>
-		<input type="radio" id="Ratigueya" name="mascota" /><br>
+		<input type="radio" id="Ratigueya" name="mascota" />
 
 		<button id="boton-mascota">Seleccionar</button>
 
